--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Norey - Remote",
+  "name": "Norey Remote",
   "version": "1.0.0",
   "private": true,
   "description": "Norey - Remote",
