--- a/package.json
+++ b/package.json
@@ -1,33 +1,39 @@
 {
-  "name": "Norey-Remote",
+  "name": "Norey Remote",
+  "description": "We connect people",
   "version": "1.0.0",
-  "private": true,
-  "description": "Norey - Remote",
-  "author": "DamianKursa",
+  "author": "Damian Kursa",
+  "dependencies": {
+    "dotenv": "^8.1.0",
+    "gatsby": "^2.24.81",
+    "gatsby-image": "^2.4.21",
+    "gatsby-plugin-manifest": "^3.14.0",
+    "gatsby-plugin-react-helmet": "^3.3.14",
+    "gatsby-plugin-sass": "^2.3.18",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
+    "gatsby-remark-lottie": "^1.0.3",
+    "gatsby-source-datocms": "^2.2.4",
+    "gatsby-source-filesystem": "^2.3.35",
+    "gatsby-transformer-remark": "^2.8.43",
+    "node-sass": "^4.13.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-helmet": "^5.2.0",
+    "react-slick": "^0.25.2",
+    "request": "^2.88.2"
+  },
   "keywords": [
     "gatsby"
   ],
+  "license": "MIT",
+  "main": "n/a",
   "scripts": {
-    "develop": "gatsby develop",
-    "start": "gatsby develop",
     "build": "gatsby build",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "develop": "gatsby develop",
+    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\""
   },
-  "dependencies": {
-    "dotenv": "^10.0.0",
-    "gatsby": "^3.13.1",
-    "gatsby-plugin-config": "^1.0.7",
-    "gatsby-plugin-image": "^1.14.0",
-    "gatsby-plugin-react-helmet": "^4.14.0",
-    "gatsby-plugin-sass": "^4.14.0",
-    "gatsby-plugin-sharp": "^3.14.0",
-    "gatsby-source-datocms": "^2.6.18",
-    "gatsby-source-filesystem": "^3.14.0",
-    "gatsby-transformer-sharp": "^3.14.0",
-    "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0",
-    "sass": "^1.41.1"
+  "devDependencies": {
+    "prettier": "^1.17.0"
   }
 }
