--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
   "dependencies": {
     "dotenv": "^8.1.0",
     "gatsby": "^2.24.81",
+    "gatsby-background-image": "^1.5.3",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-manifest": "^3.14.0",
     "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-sass": "^2.3.18",
+    "gatsby-plugin-sharp": "^3.14.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-remark-lottie": "^1.0.3",
     "gatsby-source-datocms": "^2.2.4",
     "gatsby-source-filesystem": "^2.3.35",
     "gatsby-transformer-remark": "^2.8.43",
+    "gatsby-transformer-sharp": "^3.14.0",
+    "gbimage-bridge": "^0.1.4",
     "node-sass": "^4.13.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
@@ -32,7 +36,6 @@
     "develop": "gatsby develop",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\""
   },
-    "react-dom": "^17.0.1",
   "devDependencies": {
     "prettier": "^1.17.0"
   }
