--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Norey Remote",
+  "name": "Norey-Remote",
   "description": "We connect people",
   "version": "1.0.0",
   "author": "Damian Kursa",
