--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-manifest": "^3.14.0",
     "gatsby-plugin-react-helmet": "^3.3.14",
+    "gatsby-plugin-react-svg": "^3.0.1",
     "gatsby-plugin-sass": "^2.3.18",
     "gatsby-plugin-sharp": "^3.14.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
