--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "version": "1.0.0",
   "author": "Damian Kursa",
   "dependencies": {
+    "classnames": "^2.3.1",
     "dotenv": "^10.0.0",
     "gatsby": "^3.14.0",
     "gatsby-background-image": "^1.5.3",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-manifest": "^3.14.0",
+    "gatsby-plugin-portal": "^1.0.7",
     "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-plugin-react-svg": "^3.0.1",
     "gatsby-plugin-sass": "^4.14.0",
