--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-lottie": "^1.2.3",
     "react-slick": "^0.28.1",
     "request": "^2.88.2"
   },
